<resources>
    <string name="app_name">Hours</string>
    <string name="CreateAccount">Create account</string>
    <string name="Login">Log in</string>
    <string name="Register">Register</string>
    <string name="UserNamePlaceholder">User Name</string>
    <string name="EmailPlaceholder">E_Mail</string>
    <string name="PasswordPlaceholder">Password</string>
    <string name="ConfirmPasswordPlaceholder">Confirm Password</string>
    <string name="ForgetPassword">Forget Password ?</string>
    <string name="ResetPassword">Reset Password</string>
    <string name="Find">Find</string>
    <string name="Reset">Reset</string>
    <string name="Video">Video</string>
    <string name="EgyptTouristMap">Egypt tourist map</string>
    <string name="TripsNeed">Trips for persons with special needs</string>
    <string name="Luxor">Luxor</string>
    <string name="Pyramids">Pyramids</string>
    <string name="Giza">Giza</string>
    <string name="Aswan">Aswan</string>
    <string name="Destination">Destination</string>
    <string name="Details">Details</string>
    <string name="Price">Price</string>
    <string name="For">For</string>
    <string name="NumberOfPersons">Number Of Persons   </string>
    <string name="Book">Book</string>
    <string name="CancelTrip">Cancel Trip</string>
    <string name="PriceQuantity">20$</string>
    <string name="PersonsQuantity">3 Persons</string>
    <string name="LeisureTourism">Leisure Tourism</string>
    <string name="TherapeuticTourism">Therapeutic Tourism</string>
    <string name="JndoorTourism">Jndoor Tourism</string>
    <string name="OuoonMosa">Ouoon Mosa</string>
    <string name="SiniaWells">Sinia Wells</string>
    <string name="ShowOnMap">Show on Map</string>
    <string name="Name">Sara Ahmed</string>
    <string name="Email">SaraAhmed@gmail.com</string>
    <string name="Location">visited 3 places</string>
    <string name="Profile">profile</string>
    <string name="LuxorKarnak">AlKarnak</string>
    <string name="LuxorHatchbsoot">Hatchbsot</string>
    <string name="LuxorFila">Filla</string>
    <string name="title_activity_maps">Map</string>
    <string name="CompanyNaame">Company Name</string>
    <string name="CompanyNumber">Company Number</string>
    <string name="CompanyNaame1">Abanoub for travel</string>
    <string name="CompanyNumber1">24182671</string>
    <string name="CompanyNaame2">Abtkar Travel</string>
    <string name="CompanyNumber2">232446</string>
    <string name="CompanyNaame3">Atoan Travel</string>
    <string name="CompanyNumber3">26362969</string>
    <string name="CompanyNaame4">Abidos for travel</string>
    <string name="CompanyNumber4">25740931</string>
</resources>
