<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background5"
    tools:context=".TravelCompanies">
    <TableLayout
        android:id="@+id/descripe_table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/borderbutton"
        android:divider="@color/basicColor"
        app:layout_constraintBottom_toTopOf="@+id/book_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804">

        <TableRow
            android:id="@+id/company_tr"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/borderbutton">

            <TextView
                android:id="@+id/description_tv"
                style="@style/basicSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/basic_padding"
                android:text="@string/CompanyNaame"
                android:textColor="@color/basicColor" />

            <TextView
                android:id="@+id/luxor_tv"
                style="@style/basicSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CompanyNumber"
                android:padding="@dimen/basic_padding"
                android:textColor="@color/basicColor" />
        </TableRow>

        <TableRow
            android:id="@+id/company1_tr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/borderbutton">

            <TextView
                android:id="@+id/detialds_tv"
                style="@style/basicSize"
                android:padding="@dimen/basic_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/basic_padding"
                android:text="@string/CompanyNaame1"
                android:textColor="@color/basicColor" />
            <TextView
                android:id="@+id/detialdss_tv"
                style="@style/basicSize"
                android:padding="@dimen/basic_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/basic_padding"
                android:text="@string/CompanyNumber1"
                android:textColor="@color/basicColor" />


        </TableRow>

        <TableRow
            android:id="@+id/company2_tr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/borderbutton">

            <TextView
                android:id="@+id/price_tv"
                style="@style/basicSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/basic_padding"
                android:text="@string/CompanyNaame2"
                android:textColor="@color/basicColor" />

            <TextView
                android:id="@+id/price_value_tv"
                style="@style/basicSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CompanyNumber2"
                android:padding="@dimen/basic_padding"
                android:textColor="@color/basicColor" />

        </TableRow>

        <TableRow
            android:id="@+id/company3_tr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/borderbutton">

            <TextView
                android:id="@+id/for_tv"
                style="@style/basicSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/basic_padding"
                android:text="@string/CompanyNaame3"
                android:textColor="@color/basicColor" />

            <TextView
                android:id="@+id/day_tv"
                style="@style/basicSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CompanyNumber3"
                android:padding="@dimen/basic_padding"
                android:textColor="@color/basicColor" />

        </TableRow>

        <TableRow
            android:id="@+id/company4_tr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/borderbutton">

            <TextView
                android:id="@+id/number_of_personal_tv"
                style="@style/basicSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/basic_padding"
                android:text="@string/CompanyNaame4"
                android:textColor="@color/basicColor" />

            <TextView
                android:id="@+id/persons_tv"
                style="@style/basicSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CompanyNumber4"
                android:padding="@dimen/basic_padding"
                android:textColor="@color/basicColor" />
        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>