<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background5"
    tools:context=".LuxorDescripionActivity">

    <TableLayout
        android:id="@+id/descripe_table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/borderbutton"
        android:divider="@color/basicColor"
        app:layout_constraintBottom_toTopOf="@+id/book_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804">

        <TableRow
            android:id="@+id/row_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/borderbutton">

            <TextView
                android:id="@+id/description_tv"
                style="@style/basicSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/basic_padding"
                android:text="@string/Destination"
                android:textColor="@color/basicColor" />

            <TextView
                android:id="@+id/luxor_tv"
                style="@style/basicSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Luxor"
                android:textColor="@color/basicColor" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/borderbutton">

            <TextView
                android:id="@+id/detialds_tv"
                style="@style/basicSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/basic_padding"
                android:text="@string/Details"
                android:textColor="@color/basicColor" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/borderbutton">

            <TextView
                android:id="@+id/price_tv"
                style="@style/basicSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/basic_padding"
                android:text="@string/Price"
                android:textColor="@color/basicColor" />

            <TextView
                android:id="@+id/price_value_tv"
                style="@style/basicSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PriceQuantity"
                android:textColor="@color/basicColor" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/borderbutton">

            <TextView
                android:id="@+id/for_tv"
                style="@style/basicSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/basic_padding"
                android:text="@string/For"
                android:textColor="@color/basicColor" />

            <TextView
                android:id="@+id/day_tv"
                style="@style/basicSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/For"
                android:textColor="@color/basicColor" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/borderbutton">

            <TextView
                android:id="@+id/number_of_personal_tv"
                style="@style/basicSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/basic_padding"
                android:text="@string/NumberOfPersons"
                android:textColor="@color/basicColor" />

            <TextView
                android:id="@+id/persons_tv"
                style="@style/basicSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PersonsQuantity"
                android:paddingRight="@dimen/basic_padding"
                android:textColor="@color/basicColor" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/book_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="176dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/Book"
        android:background="@color/basicColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>