<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LuxorPlaces">

    <Button
        android:id="@+id/luxorkarnak_video_btn"
        style="@style/basicSize"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/background3"
        android:text="@string/LuxorKarnak"
        android:textColor="@color/basicColor" />

    <Button
        android:id="@+id/luxorhatshbsot_video_btn"
        style="@style/basicSize"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bacground4"
        android:text="@string/LuxorHatchbsoot"
        android:textColor="@color/basicColor" />

    <Button
        android:id="@+id/luxorfilaa_video_btn"
        style="@style/basicSize"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/background5"
        android:text="@string/LuxorFila"
        android:textColor="@color/basicColor" />
</LinearLayout>