<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background5"
    tools:context=".MapActivity">

    <TableLayout
        android:id="@+id/descripe_book_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/borderbutton"
        android:divider="@color/basicColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.514">

        <TableRow
            android:id="@+id/row_book_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/borderbutton">

            <TextView
                android:id="@+id/description_book_tv"
                style="@style/smallSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/basic_padding"
                android:text="@string/Destination"
                android:textColor="@color/basicColor" />

            <TextView
                android:id="@+id/luxor_book_tv"
                style="@style/smallSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/basic_padding"
                android:text="@string/Luxor"
                android:textColor="@color/basicColor" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/borderbutton">

            <TextView
                android:id="@+id/detialds_book_tv"
                style="@style/smallSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/basic_padding"
                android:text="@string/Details"
                android:textColor="@color/basicColor" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/borderbutton">

            <TextView
                android:id="@+id/price_book_tv"
                style="@style/smallSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/basic_padding"
                android:text="@string/Price"
                android:textColor="@color/basicColor" />

            <TextView
                android:id="@+id/price_value_book_tv"
                style="@style/smallSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/basic_padding"
                android:text="@string/PriceQuantity"
                android:textColor="@color/basicColor" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/borderbutton">

            <TextView
                android:id="@+id/for_book_tv"
                style="@style/smallSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/basic_padding"
                android:text="@string/For"
                android:textColor="@color/basicColor" />

            <TextView
                android:id="@+id/day_book_tv"
                style="@style/smallSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/basic_padding"
                android:text="@string/For"
                android:textColor="@color/basicColor" />

        </TableRow>

        <TableRow

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/borderbutton">

            <TextView
                android:id="@+id/number_of_personal_book_tv"
                style="@style/smallSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/basic_padding"
                android:text="@string/NumberOfPersons"
                android:textColor="@color/basicColor" />

            <TextView
                android:id="@+id/persons_book_tv"
                style="@style/smallSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/basic_padding"
                android:text="@string/PersonsQuantity"
                android:textColor="@color/basicColor" />
        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>